--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"license": "ISC",
 	"type": "commonjs",
 	"dependencies": {
+		"@prisma/client": "^6.12.0",
 		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
 		"morgan": "^1.10.1",
@@ -28,6 +29,7 @@
 		"@types/node": "^24.0.14",
 		"nodemon": "^3.1.10",
 		"prettier": "^3.6.2",
+		"prisma": "^6.12.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3"
 	}
