feat: configured postgres

--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-	"name": "file-share-be",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"build": "tsc -b",
-		"start": "node ./dist/server.js",
-		"dev": "nodemon ./src/server.ts",
-		"db:migrate": "primsa migrate dev",
-		"db:generate": "prisma generate",
-		"studio": "prisma studio",
-		"prettier": "npx prettier --write '**/*.{js,ts}'"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"type": "commonjs",
-	"dependencies": {
-		"@prisma/client": "^6.12.0",
-		"dotenv": "^17.2.0",
-		"express": "^5.1.0",
-		"morgan": "^1.10.1",
-		"zod": "^4.0.5"
-	},
-	"devDependencies": {
-		"@types/express": "^5.0.3",
-		"@types/morgan": "^1.9.10",
-		"@types/node": "^24.0.14",
-		"nodemon": "^3.1.10",
-		"prettier": "^3.6.2",
-		"prisma": "^6.12.0",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.8.3"
-	}
+  "name": "file-share-be",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "tsc -b",
+    "start": "node ./dist/server.js",
+    "dev": "nodemon ./src/server.ts",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "studio": "prisma studio",
+    "prettier": "npx prettier --write '**/*.{js,ts}'"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "dependencies": {
+    "@prisma/client": "^6.12.0",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "morgan": "^1.10.1",
+    "zod": "^4.0.5"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.0.14",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
+    "prisma": "^6.12.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  }
 }
