--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,12 @@ NODE_ENV=
 # database
 DATABASE_URL=
 
+# aws s3
+AWS_S3_REGION=
+AWS_S3_ACCESS_KEY_ID=
+AWS_S3_SECRET_ACCESS_KEY=
+AWS_S3_BUCKET_NAME=
+
 # docker
 # db 
 POSTGRES_PASSWORD=
