--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.848.0",
+    "@aws-sdk/s3-request-presigner": "^3.848.0",
     "@prisma/client": "^6.12.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "morgan": "^1.10.1",
     "zod": "^4.0.5"
   },
